# lab-inventory

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  需求文档.md
backend/: Cargo.toml  LOGIN_IMPLEMENTATION.md
backend/configuration/: base.yaml  local.yaml  production.yaml
backend/examples/: hash_password.rs
backend/migrations/: 20251019152939_seed_user.sql  20260430000000_create_auth_schema.sql  20260430000000_initial_schema.sql  20260504000000_rename_user_groups_to_user_types.sql  20260504134412_rename_admin.sql  20260505000000_reseed_user_type_ids_as_valid_uuids.sql  20260526000000_add_parent_to_asset_categories.sql  20260613000000_federation_demo.sql  20260627000000_add_federation.sql
backend/scripts/: init_db.ps1  init_db.sh  init_redis.ps1  init_redis.sh
backend/src/: access_control.rs  audit.rs  authentication.rs  configuration.rs  email_client.rs  federation.rs  lib.rs  main.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
backend/src/attachment_storage/: local.rs  mod.rs  model.rs
backend/src/authentication/: authorization.rs  middleware.rs  mod.rs  password.rs
backend/src/domain/: asset_category_code.rs  asset_category_id.rs  asset_category_name.rs  asset_id.rs  asset_inventory_status.rs  asset_name.rs  asset_parameter_code.rs  asset_parameter_data_type.rs  asset_parameter_id.rs  asset_parameter_name.rs  asset_parameter_option_label.rs  asset_tracking_mode.rs  attachment_description.rs  attachment_display_name.rs  attachment_file_name.rs  attachment_file_size.rs  attachment_id.rs  attachment_sha256.rs  attachment_storage_backend.rs  attachment_storage_key.rs  attachment_upload_id.rs  attachment_visibility.rs  laboratory_id.rs  location_code.rs  location_id.rs  location_name.rs  mod.rs  new_asset.rs  new_asset_category.rs  new_asset_parameter.rs  new_attachment.rs  new_location.rs  new_unit.rs  new_user.rs  phone_number.rs  subscriber_email.rs  subscriber_name.rs  unit_code.rs  unit_dimension.rs  unit_name.rs  (+13 more)
backend/src/idempotency/: key.rs  mod.rs  persistence.rs
backend/src/routes/: federation_api.rs  health_check.rs  mod.rs  pagination.rs  parameter_filters.rs
backend/src/routes/alerts/: borrow_requests.rs  maintenance.rs  mod.rs  model.rs  stock.rs
backend/src/routes/asset_categories/: create.rs  delete.rs  get.rs  helpers.rs  list.rs  mod.rs  model.rs  update.rs
backend/src/routes/asset_parameters/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  update.rs
backend/src/routes/assets/: create.rs  delete.rs  get.rs  helpers.rs  list.rs  mod.rs  model.rs  update.rs
backend/src/routes/attachments/: create.rs  delete.rs  delete_upload.rs  download.rs  error.rs  get.rs  helpers.rs  list.rs  mod.rs  model.rs  update.rs  upload.rs
backend/src/routes/audit_logs/: list.rs  mod.rs  model.rs
backend/src/routes/auth/: get.rs  mod.rs  password.rs  post.rs
backend/src/routes/borrow_requests/: approve.rs  cancel.rs  create.rs  get.rs  helpers.rs  list.rs  mark_borrowed.rs  mod.rs  model.rs  reject.rs  return_item.rs
backend/src/routes/exports/: csv.rs  mod.rs
backend/src/routes/federation/: admin.rs  inbound.rs  (+5 more)
backend/target-codex/: .rustc_info.json
backend/tests/api/: alerts.rs  asset_categories.rs  asset_parameters.rs  assets.rs  attachments.rs  auth.rs  borrow_requests.rs  federation.rs  health_check.rs  helpers.rs  inventory.rs  inventory_items.rs  laboratories.rs  locations.rs  main.rs  maintenance.rs  migrations.rs  query_export_audit.rs  test_user.rs  units.rs  users.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
(+208 files in other folders)
