[package]
name = "lab-inventory"
version = "0.1.0"
authors = ["spinleft <spinleftgit@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lab-inventory"

[dependencies]
actix-cors = "0.7"
actix-session = { version = "0.11", features = ["redis-session-rustls"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
rand = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.19"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.7"
fake = "3.0"
linkify = "0.10"
once_cell = "1"
quickcheck = "1.0.3"
quickcheck_macros = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"