[package]
name = "lab-inventory"
version = "0.1.0"
authors = ["spinleft <spinleftgit@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lab-inventory"

[dependencies]
actix-cors = "0.7"
actix-session = { version = "0.11", features = ["redis-session-rustls"] }
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.13"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.20"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
claims = "0.8"
fake = "2.9"
quickcheck = "1.1"
quickcheck_macros = "1"
