[package]
name = "lab-inventory-desktop"
version = "0.1.0"
description = "Lab Inventory desktop client"
authors = ["spinleft <spinleftgit@gmail.com>"]
edition = "2021"

[lib]
name = "lab_inventory_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
